Fixing the header text on small resolutions

--- a/css/custom.css
+++ b/css/custom.css
@@ -23,8 +23,9 @@ body {
     font-weight: bold;
 }
 
-h2 {
+.title {
     color: #C09853;
+    text-align: center;
 }
 
 .img-center {
